@@ -8,6 +8,7 @@
 package com.powsybl.security.dynamic;
 
 import com.google.common.base.Suppliers;
+import com.google.common.collect.ImmutableMap;
 import com.powsybl.commons.config.PlatformConfig;
 import com.powsybl.commons.extensions.Extension;
 import com.powsybl.commons.extensions.ExtensionConfigLoader;
@@ -126,7 +127,7 @@ public class DynamicSimulationContingenciesParameters extends AbstractDynamicSim
 
     @Override
     protected Map<String, Object> toMap() {
-        return Map.of("startTime", getStartTime(),
+        return ImmutableMap.of("startTime", getStartTime(),
                 "stopTime", getStopTime(),
                 "contingenciesStartTime", contingenciesStartTime);
     }
